# bot_delo_zhivet

./: .README.md.swp  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-postgres-client  Dockerfile_bot_admin  README.md  SHORCUTS.md  alembic.ini  backup_instruction.txt  docker-compose-local.yaml  docker-compose.yaml  manage.py  postgres-local.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: bot_delo_zhivet_workflow.yml  bot_delo_zhivet_workflow_dev.yml  lint.yml  yamdb_workflow.yml
admin/: README  README.md  __init__.py  app.py  commands.py  config.py  database.py  forms.py  locales.py  logger.py  manage.py  messages.py  run.py  utils.py  views.py
admin/forms/: auth.py  common_fields.py  constants.py
admin/static/css/: index.css
admin/templates/: index.html  my_master.html
admin/templates/admin/: 403.html  404.html  base.html  index.html  layout.html  lib.html  master-extended.html  static.html
admin/templates/admin/email/: reset_password.html
admin/templates/admin/includes/: dropdown.html  header.html
admin/templates/admin/includes/buttons/: log_out.html
admin/templates/admin/model/: create.html  details.html  list.html
admin/templates/admin/model/modals/: create.html  details.html  edit.html
admin/templates/admin/security/: login_user.html  register_user.html  reset_password.html
admin/templates/emails/: reset_email.html  reset_email.txt
admin/templates/security/: _menu.html  _messages.html  login_user.html  register_user.html
admin/views/: auth.py  utils.py  views.py
alembic/: env.py
alembic/versions/: 1099b94962a7_first_migration.py  2a66ce12c5c7_you_migration_name.py  2f387fd648c6_first_migration.py  2fd072beeb15_first_migration.py  3328aa85b124_first_migration.py  345200deafa6_first_migration.py  379e9adafdd5_removed_unique_parameter_from_.py  39236cc737f0_first_migration.py  592f9f446d40_add_username_field_to_user_model.py  6b88f42d644c_add_tables_pollution_assistance_disabled.py  737c74518c9b_zakongyka_migration.py  762113fb014e_first_migration.py  76488bd3f8e9_admin_migration.py  77eb86285a9e_admin_migration.py  80ecb8fd5c81_zakongyka_migration.py  8a439471d2cd_admin_migration.py  99568b5f4c1f_first_migration.py  a00a66c5bd9c_add_tags.py  a277a177c4b1_you_migration_name.py  a3b3f32de324_migration_for_delo_zhivet_akk.py  a83d2b2af3e7_zakongyka_add_phone_number.py  a97b09d292d7_third_try.py  ab7d6e6b8954_first_migration.py  ae0db80dfa2b_first_migration.py  af738d1b1f65_first_migration.py  af7ccd25b5de_add_holiday_and_in_active_to_volunteer.py  b26f57973f92_add_telegramm_id_field.py  b34fce67f4a8_phone_number.py  b5707fc337c1_add_tags.py  d940c6d9ae79_tags_many_to_many.py  da5fb4d5fc69_add_volunteer_holiday.py  e07ef2f6196f_zakongyka_add_phone_number.py  f2dfee9a709b_add_holiday_and_in_active_to_volunteer.py  f70d6b532bd8_first_migration111.py
celery_task/: celery_task.py  run_dump.py
infrastructure/: .env.aws.example  .env.dadata.example  .env.db.example  .env.db.local.example  .env.flask.example  .env.geocoder.example  .env.mail.example  .env.nginx.example  .env.s3.example  .env.sentry.example  .env.telegram.example  .env.yatracker.example  docker-compose-develop.yaml  docker-compose-test.yaml  docker-compose.yaml  update_certificate.sh  update_nginx_conf.sh  updating_nginx_conf.sh
infrastructure/.env.examples/: .env.db.example  .env.db.local.example  .env.flask.example  .env.grafana.example  .env.sentry.example
infrastructure/archive/: docker-compose-local-images.yaml  docker-compose-master.yaml  docker-compose.yaml
infrastructure/docker_compose_files/: docker-compose-deploy.yaml  docker-compose-dev-deploy.yaml  docker-compose-local-images.yaml  docker-compose-local.yaml  postgres-local.yaml
infrastructure/grafana/: dashboards.yml  datasources.yml  grafana-datasources.yaml  loki-config.yaml  map.json  promtail-config.yaml  promtail.yaml
infrastructure/nginx/: Dockerfile  default.conf  delo-local.conf  delo.conf
nginx/: default.conf
src/: main.py
src/api/: constants.py  tags_update.py  tracker.py
src/bot/: __init__.py  application.py  const.py  exceptions.py  keyboards.py  tasks.py
src/bot/address/: address_api.py
src/bot/handlers/: add_tags.py  common.py  holiday.py  loggers.py  participation.py  pollution.py  report.py  social.py  start.py  state_constants.py  volunteer.py
src/bot/handlers/add_pollution_tag/: __init__.py  callbacks.py  conversation.py
src/bot/handlers/add_social_tag/: __init__.py  callbacks.py  conversation.py
src/bot/service/: assistance_disabled.py  common_functions.py  dadata.py  get_issues_with_statuses.py  getting_objects_from_tracker.py  holiday.py  phone_number.py  pollution.py  remake_list_of_volunteers.py  save_new_user.py  save_tracker_id.py  tags.py  volunteer.py
src/core/: backoff.py  config.py  mixins.py  settings.py
src/core/db/: __init__.py  base.py  db.py  model.py
src/core/db/backup/: task.py
src/core/db/repository/: abstract_repository.py  assistance_disabled_repository.py  member_repository.py  pollution_repository.py  report_repository.py  request_repository.py  shift_repository.py  tags_repository.py  task_repository.py  user_repository.py  volunteer_repository.py
